--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,158 +1,175 @@
 pipeline {
-    agent any
-    
-    environment {
-        DOCKER_IMAGE = 'ytthpch/nestjs-jenkin-k8s'
-        DOCKER_TAG = '1.4'
-        K8S_NAMESPACE = 'default'
-        K8S_DEPLOYMENT_NAME = 'nestjs-jenkin-k8s-app'
-        K8S_SERVICE_NAME = 'nestjs-jenkin-k8s-service'
-    }
-    
-    stages {
-        stage('Setup Tools') {
-            steps {
-                sh '''
-                    # Check if Docker is available
-                    if ! command -v docker &> /dev/null; then
-                        echo "Docker is not installed or not in PATH"
-                        echo "Please ensure Docker is installed on the Jenkins agent"
-                        exit 1
-                    fi
-                    
-                    docker --version
-                '''
-            }
-        }
-        
-        stage('Checkout') {
-            steps {
-                git branch: 'main', url: 'https://github.com/poom-ytthpch/nestjs-jenkin-k8s.git'
-            }
-        }
-        
-        stage('Install Dependencies') {
-            steps {
-                sh '''
-                    docker run --rm -v ${WORKSPACE}:/app -w /app node:20 npm install
-                '''
-            }
-        }
-        
-        // stage('Run Tests') {
-        //     steps {
-        //         sh '''
-        //             export NVM_DIR="$HOME/.nvm"
-        //             [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-        //             nvm use 20
-        //             npm run test
-        //         '''
-        //     }
-        // }
-        
-        stage('Build Application') {
-            steps {
-                sh '''
-                    docker run --rm -v ${WORKSPACE}:/app -w /app node:20 npm run build
-                '''
-            }
-        }
-        
-        stage('Create Env ConfigMap') {
-            steps {
-                withCredentials([
-                  string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
-                  file(credentialsId: 'k8s-config', variable: 'KUBE_CONFIG')
-                ]) {
-                  sh '''
-                    echo "=== ENV FILE CONTENT ==="
-                    echo "$ENV_FILE"
-                    echo ""
-                    echo "=== END ENV FILE ==="
-                    echo "$ENV_FILE" > .env
 
-                    docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBE_CONFIG}:/config/.kube/config \\
-                      bitnami/kubectl:latest \\
-                      --kubeconfig=/config/.kube/config \\
-                      delete configmap nestjs-jenkin-k8s-env \\
-                      --namespace=$K8S_NAMESPACE \\
-                      --ignore-not-found
+  agent {
+    kubernetes {
+      yaml """
+apiVersion: v1
+kind: Pod
+spec:
+  containers:
 
-                    docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBE_CONFIG}:/config/.kube/config \\
-                      bitnami/kubectl:latest \\
-                      --kubeconfig=/config/.kube/config \\
-                      create configmap nestjs-jenkin-k8s-env \\
-                      --from-env-file=/workspace/.env \\
-                      --namespace=$K8S_NAMESPACE
-                  '''
-                }
-            }
-        }
-        
-        stage('Build Docker Image') {
-            steps {
-                sh '''
-                    docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} .
-                '''
-            }
-        }
-        
-        stage('Push Docker Image') {
-            steps {
-                withCredentials([
-                    usernamePassword(
-                        credentialsId: 'docker-hub-credentials',
-                        usernameVariable: 'DOCKER_USER',
-                        passwordVariable: 'DOCKER_PASS'
-                    )
-                ]) {
-                    sh '''
-                        echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-                        docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
-                    '''
-                }
-            }
-        }
-        
-        stage('Deploy to Kubernetes') {
-            steps {
-                withCredentials([
-                  file(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
-                ]) {
-                    script {
-                        sh '''
-                            # อัปเดต image version ใน deployment.yaml
-                            sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
-                            
-                            # ใช้ kubectl ในการ deploy
-                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
-                              bitnami/kubectl:latest \\
-                              --kubeconfig=/config/.kube/config \\
-                              apply -f /workspace/k8s/deployment.yaml -n ${K8S_NAMESPACE}
-                              
-                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
-                              bitnami/kubectl:latest \\
-                              --kubeconfig=/config/.kube/config \\
-                              apply -f /workspace/k8s/service.yaml -n ${K8S_NAMESPACE}
-                            
-                            # รอให้ deployment พร้อม
-                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
-                              bitnami/kubectl:latest \\
-                              --kubeconfig=/config/.kube/config \\
-                              rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
-                        '''
-                    }
-                }
-            }
-        }
+  - name: node
+    image: node:20
+    command:
+    - cat
+    tty: true
+
+  - name: kaniko
+    image: gcr.io/kaniko-project/executor:latest
+    command:
+    - cat
+    tty: true
+    volumeMounts:
+    - name: docker-config
+      mountPath: /kaniko/.docker
+
+  - name: kubectl
+    image: bitnami/kubectl:latest
+    command:
+    - cat
+    tty: true
+
+  volumes:
+  - name: docker-config
+    emptyDir: {}
+"""
     }
-    
-    post {
-        success {
-            echo 'Deployment successful!'
-        }
-        failure {
-            echo 'Deployment failed!'
-        }
+  }
+
+  environment {
+    DOCKER_IMAGE = 'ytthpch/nestjs-jenkin-k8s'
+    DOCKER_TAG   = '1.4'
+
+    K8S_NAMESPACE = 'default'
+    K8S_DEPLOYMENT_NAME = 'nestjs-jenkin-k8s-app'
+  }
+
+  stages {
+
+    // ---------------------------
+    stage('Checkout') {
+      steps {
+        git branch: 'main',
+            url: 'https://github.com/poom-ytthpch/nestjs-jenkin-k8s.git'
+      }
     }
+
+    // ---------------------------
+    stage('Install & Build') {
+      steps {
+        container('node') {
+          sh '''
+            npm install
+            npm run build
+          '''
+        }
+      }
+    }
+
+    // ---------------------------
+    stage('Build & Push Image (Kaniko)') {
+
+      steps {
+
+        container('kaniko') {
+
+          withCredentials([
+            usernamePassword(
+              credentialsId: 'docker-hub-credentials',
+              usernameVariable: 'DOCKER_USER',
+              passwordVariable: 'DOCKER_PASS'
+            )
+          ]) {
+
+            sh '''
+              mkdir -p /kaniko/.docker
+
+              cat <<EOF > /kaniko/.docker/config.json
+              {
+                "auths": {
+                  "https://index.docker.io/v1/": {
+                    "username": "$DOCKER_USER",
+                    "password": "$DOCKER_PASS"
+                  }
+                }
+              }
+              EOF
+
+              /kaniko/executor \
+                --context=${WORKSPACE} \
+                --dockerfile=${WORKSPACE}/Dockerfile \
+                --destination=${DOCKER_IMAGE}:${DOCKER_TAG}
+            '''
+          }
+        }
+      }
+    }
+
+    // ---------------------------
+    stage('Create ConfigMap') {
+
+      steps {
+
+        container('kubectl') {
+
+          withCredentials([
+            string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
+            file(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+          ]) {
+
+            sh '''
+              echo "$ENV_FILE" > .env
+
+              export KUBECONFIG=$KUBECONFIG
+
+              kubectl delete configmap nestjs-jenkin-k8s-env \
+                -n ${K8S_NAMESPACE} \
+                --ignore-not-found
+
+              kubectl create configmap nestjs-jenkin-k8s-env \
+                --from-env-file=.env \
+                -n ${K8S_NAMESPACE}
+            '''
+          }
+        }
+      }
+    }
+
+    // ---------------------------
+    stage('Deploy') {
+
+      steps {
+
+        container('kubectl') {
+
+          withCredentials([
+            file(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+          ]) {
+
+            sh '''
+              export KUBECONFIG=$KUBECONFIG
+
+              sed -i "s|image: .*|image: ${DOCKER_IMAGE}:${DOCKER_TAG}|g" k8s/deployment.yaml
+
+              kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
+              kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
+
+              kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} \
+                -n ${K8S_NAMESPACE}
+            '''
+          }
+        }
+      }
+    }
+  }
+
+  post {
+    success {
+      echo 'Deployment successful!'
+    }
+
+    failure {
+      echo 'Deployment failed!'
+    }
+  }
 }
